<resources>
    <string name="app_name">DigiCard</string>
    <!--<string-array name="initials">-->
    <!--<item>Mr.</item>-->
    <!--<item>Mrs.</item>-->
    <!--<item>Ms.</item>-->
    <!--<item>Dr.</item>-->
    <!--<item>Er.</item>-->
    <!--</string-array>-->
    <!--<string name="hintName">Name</string>-->
    <!--<string name="gender">Gender</string>-->
    <!--<string name="hintDesignation">Designation</string>-->
    <!--<string name="hintAddress">Address</string>-->
    <!--<string name="app_name">Registeration</string>-->
    <string-array name="initials">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
        <item>Dr.</item>
        <item>Prof.</item>
        <item>Gen.</item>
    </string-array>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="others">Other</string>
    <string name="designation">Designation</string>
    <string name="address">Address</string>
    <string name="mail">Email ID</string>
    <string name="password">Password</string>
    <string name="repassword">Re-enter Password</string>
    <string name="clear">CLEAR</string>
    <string name="submit">SUBMIT</string>
    <string name="facebook">Facebook Profile</string>
    <string name="title_activity_login">DigiCard</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_swipe">Digi Card</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
