<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".New_user">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.33">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/fab_margin"
                    app:srcCompat="@android:drawable/ic_menu_camera" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:id="@+id/name_layout">

                    <Spinner
                        android:id="@+id/initials"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:entries="@array/initials"
                        android:scrollbarSize="20dp"
                        android:gravity="center">

                    </Spinner>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/initials">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_edittext"

                            android:drawableLeft="@drawable/person"
                            android:hint="@string/full_name"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>




                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/name_layout"
                    android:id="@+id/gender_selection">

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="99dp"
                        android:layout_height="47dp"
                        android:layout_weight='1'
                        android:gravity="center"

                        android:text="@string/gender"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/radioSex"
                        android:layout_width="284dp"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/gender"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:checked="true"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/female" />

                        <RadioButton
                            android:id="@+id/radioOther"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/others" />

                    </RadioGroup>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/gender_selection"
                    android:id="@+id/phone_layout">

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Phone"
                        android:textSize="14sp" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_phoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/phone">

                        <EditText
                            android:id="@+id/phone_number"
                            android:layout_width="284dp"
                            android:layout_height="48dp"

                            android:background="@drawable/rounded_edittext"
                            android:hint="@string/Phone_number"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/phone_layout"
                    android:id="@+id/layout_designation">

                    <TextView
                        android:id="@+id/desig"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:lineSpacingExtra="8sp"
                        android:text="Designation"
                        android:textSize="14sp" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_designation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/desig"
                        >

                        <EditText
                            android:id="@+id/input_designation"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/rounded_edittext"
                            android:hint="@string/designation"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/layout_designation"
                    android:id="@+id/address_layout">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Address"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_toRightOf="@id/address"
                        android:orientation="vertical"
                        >

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_address"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            >
                            <EditText
                                android:id="@+id/input_city_detail"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_below="@+id/input_address"
                                android:background="@drawable/rounded_edittext"
                                android:drawableLeft="@drawable/address"
                                android:hint="City"
                                android:imeOptions="actionNext"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_city"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"   >
                            <EditText
                                android:id="@+id/input_address"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:background="@drawable/rounded_edittext"
                                android:drawableLeft="@drawable/address"
                                android:hint="@string/address"
                                android:imeOptions="actionNext"
                                android:maxLines="1"
                                android:singleLine="true" />


                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/address_layout"
                    android:id="@+id/email_layout">

                    <TextView
                        android:id="@+id/email_text"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Email"

                        android:textSize="14sp" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/email_text"
                        >


                        <EditText

                            android:id="@+id/input_mail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rounded_edittext"
                            android:drawableLeft="@drawable/mail"
                            android:hint="@string/mail"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <!--<ExpandableListView-->
                <!--android:id="@+id/websites"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/email_layout"-->
                <!--android:paddingTop="20dp">-->
                <!--</ExpandableListView>-->


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/email_layout"
                    android:id="@+id/websites_layout">

                    <TextView
                        android:id="@+id/website_text"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Websites"

                        android:textSize="14sp" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_website"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/website_text">
                        <EditText

                            android:id="@+id/input_website"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rounded_edittext"
                            android:hint="website"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/websites_layout"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/clear"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear" />

                    <Button
                        android:id="@+id/submit"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit" />
                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <!--<fragment-->
    <!--android:name="com.example.nihit.googlesignin.RegisterButtonsFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="20dp">-->

    <!--</fragment>-->
</LinearLayout>